Cimi Production KW/src/objects/DS_GTRAUMA__c.object
<CustomObject>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>DS GTRAUMA</relationshipLabel>
        <relationshipName>DS_General_Traumas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GT10RA0__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GT10RA0</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GT10RA10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GT10RA10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GT10RA11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GT10RA11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GT10RAU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GT10RAU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GT10R__c</fullName>
        <label>GT10R</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GT11RAU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GT11RAU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GT11R__c</fullName>
        <label>GT11R</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GT12RAU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GT12RAU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GT12R__c</fullName>
        <label>GT12R</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GT23RSP__c</fullName>
        <description>If Other yes, please specify</description>
        <label>GT23RSP</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTDATE__c</fullName>
        <description>When were the questions on this form administered/updated?</description>
        <label>GTDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GTPRIMRY__c</fullName>
        <description>Specify Primary Focus of treatment</description>
        <label>GTPRIMRY</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SECTION__c</fullName>
        <defaultValue>&apos;-1&apos;</defaultValue>
        <label>SECTION</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_GTRAUMA__c</fullName>
        <label>STATUS GTRAUMA</label>
        <picklist>
            <picklistValues>
                <fullName>Incomplete</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>DS GTRAUMA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Client__c</columns>
        <columns>NAME</columns>
        <columns>GTDATE__c</columns>
        <columns>GTPRIMRY__c</columns>
        <columns>STATUS_GTRAUMA__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GTRA-{YYYY}{MM}-{0}</displayFormat>
        <label>General Trauma Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DS GTRAUMA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>GTrauma_date_cannot_be_before_birth</fullName>
        <active>true</active>
        <errorConditionFormula>Client__r.DOB1__c &gt; GTDATE__c</errorConditionFormula>
        <errorDisplayField>GTDATE__c</errorDisplayField>
        <errorMessage>General trauma administration date cannot be before birth.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_date_cannot_be_future</fullName>
        <active>true</active>
        <errorConditionFormula>GTDATE__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>GTDATE__c</errorDisplayField>
        <errorMessage>Date cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr1</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT1R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Sexual maltreatment/abuse</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr10</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT10R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for War/Terrorism/PV outside  U.S.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr11</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT11R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Illness/Medical</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr12</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT12R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Serious Injury/Accident</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr13</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT13R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Natural Disaster</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr14</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT14R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Kidnapping</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr15</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT15R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Traumatic Loss or Bereavement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr16</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT16R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Separation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr17</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT17R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Forced Displacement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr18</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT18R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Impaired Caregiver</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr19</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT19R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Extreme Interpersonal Violence</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr2</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT2R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Sexual assault/rape</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr20</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT20R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Community Violence</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr21</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT21R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for School  Violence</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr22</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT22R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Bullying</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr23</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT23R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Other Trauma</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr3</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT3R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Sexual Exploitation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr4</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT4R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Physical maltreatment/abuse</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr5</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT5R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Physical assault</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr6</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT6R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Emotional abuse/Psych mal</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr7</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT7R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Neglect</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr8</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT8R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for Domestic Violence</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GTrauma_must_indicate_tr9</fullName>
        <active>true</active>
        <description>Response (No, Yes, Suspected, or Unknown) is REQUIRED</description>
        <errorConditionFormula>ISPICKVAL(GT9R__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Response (No, Yes, Suspected, or Unknown) is REQUIRED for War/Terrorism/PV inside the U.S.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Textfield</fullName>
        <active>true</active>
        <errorConditionFormula>OR(GT23RSP__c = &quot;test&quot;, GT23RSP__c = &quot;oh&quot;)</errorConditionFormula>
        <errorDisplayField>GT23RSP__c</errorDisplayField>
        <errorMessage>This item is in the list.</errorMessage>
    </validationRules>
</CustomObject>